styles/index.css
/* ... */
header, h1, h2, h3, h4, h5, h6 {
  max-width: 45rem;
  padding: var(--margin-collapse-bugfix) var(--font-size);
}

iframe {
  width: 100%;
  border: none;
  background: canvas;
}
hr { /* https://www.lifewire.com/styling-horizontal-rule-tag-3466399 */
  border: 0;
  height: .15em;
  opacity: 0.25;
  max-width: 80vw;
  overflow: visible;
  box-sizing: content-box
}

mark {
  border-radius: 0.318em;
  box-shadow: var(--box-shadow);
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/box-decoration-break */
  -webkit-box-decoration-break: clone;
          box-decoration-break: clone;
}
mark {
  padding: .618em;
  padding: 0.1618em;
  text-shadow: 0.06812em 0.06812em 0 canvas;
}
data, var {
  color: CanvasText;
  padding: 0.1618em;
  font-weight: bold;
  background: ButtonFace;
  margin-inline: 0.1618em;
}

pre, code, kbd, samp
  { border-radius: 0.618em }
pre code {
  display: inherit;
  border-radius: unset;
  border: solid currentColor;
  border-width: 0 0 0 0.02em;
}

/* CSS3 Lists
 * https://drafts.csswg.org/css-lists-3/
 * Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists
 */
ul {}
ol {}
li {}
dl {}
dt {}
dd {}

ul[role=list]
  { list-style: none; /* https://piccalil.li/blog/a-modern-css-reset/ */ }
ul, ol
  { list-style-position: inside }
ul ul, ol ol
  { }

nav > details > ul {
}

nav > details > ul li li {
  list-style: '➱' inside;
}

nav > details > ul li li:hover {
  list-style-type: '➯';
}

/**** COUNTERS *******
  - https://developer.mozilla.org/en-US/docs/Web/CSS/@counter-style
  - Example Demo - https://mdn.github.io/css-examples/counter-style-demo/
*/


/* http://html5doctor.com/the-details-and-summary-elements/ */
details { }
summary {
  opacity: 0.75;
  list-style: none;
}
summary::-webkit-details-marker
  { display: none } /* https://stackoverflow.com/a/66814239 */
details:hover > summary, details:focus-within > summary
  { opacity: 1.0 }
main details > summary::before
  { content: '>' }
main details[open] > summary::before
  { content: 'v' }

nav details > summary {
  cursor: s-resize;
  list-style: '📁' inside;
}
nav details[open] > summary {
  cursor: n-resize;
  list-style: '📂' inside;
}
nav > details > summary {
  top: 0;
  left: 50%;
  width: 98%;
  opacity: 100%;
  position: fixed;
  background: canvas;
  box-shadow: var(--shadow);
  text-align: var(--tab-size);
  transform: translateX(-50%);
  clip-path: inset(0px 244px 1px 170px);
  list-style: '☰' inside; /* https://www.htmlsymbols.xyz/unicode/U+2630 */
  clip-path: none;
}

nav > details[open] > summary {
  list-style: 'ⓧ' inside;
}
nav > details[open] > summary:hover {
  list-style: '✖' inside; /* https://www.htmlsymbols.xyz/unicode/U+2716 */
  list-style: 'ⓧ' inside; /* https://www.htmlsymbols.xyz/unicode/U+2716 */
}
body > nav, body > nav > details, body > nav > details > summary
{
  border-radius: 0 0 1ch 1ch;
  /* width: 100%; */
}
body > nav li li :link:focus-visible {
  background-color: Mark;
}
body > nav li li :link::before {
  content: '📄';
  display: inline-block;
  line-height: var(--line-height);
}
body > nav li li :link:hover::before {
  content: '📝';
}

summary::before,
summary::after {
  width: 1em;
  height: 1em;
  font-size: 1em;
  line-height: 1em;
  margin: 0 0.218em;
  text-align: center;
  display: inline-block;
  vertical-align: middle
}

/* Table styling
  - https://adrianroselli.com/2018/02/tables-css-display-properties-and-aria.html
  - counter styling & fallback
    - https://developer.mozilla.org/en-US/docs/Web/CSS/@media/forced-colors
    - https://stackoverflow.com/questions/17067294/html-table-with-100-width-with-vertical-scroll-inside-tbody/17380697#17380697
*/
table {
  /* TODO: FIX HEIGHT FROM 100vh */
  height: 100vh;
  display: block;
  overflow-y: scroll;
  table-layout: fixed;
  counter-reset: table;
  border-radius: 0.618em;
  border-collapse: collapse;
  box-shadow: var(--box-shadow);
  margin: 0 var(--line-height) var(--line-height);
}
table *
  { display: inherit }
caption {
  top: 0;
  z-index: 1;
  position: sticky;
  caption-side: top;
}
thead {}
tbody {}
th {
  top: 5em;
  padding: 0.618em;
  position: sticky;
  white-space: nowrap;
  border-bottom: 0.0618em solid
}
th:empty
  { border: none }
th[scope=row]
  { font-size: var(--smaller) }
th[scope=row]:after {
  white-space: nowrap;
  content: counter(th);
}
tr
  {}
tr:before
  { content: '' }
td {
  -webkit-user-select: text;
          user-select: text;
}

tbody tr
  { counter-increment: table }
tfoot th
  { border-top: 0.0618em solid }
th, thead, tfoot, thead tr, tfoot tr, tbody tr:nth-child(even)
  { background: ButtonFace }

a {
  cursor: pointer;
  display: inline-block;
}
a[rel=search]
  { cursor: help }
abbr[title]
  { cursor: help }
a[href='#'][title^=Top] {
  display: block;
  width: fit-content;
  text-decoration: none;
  margin: var(--p-margin) auto;
  padding: 1ch var(--line-height);
}

details summary {
  z-index: 11;
  cursor: s-resize;
}
details details summary {
  z-index: 10
}
details[open] summary
  { cursor: n-resize }
details[open] > summary a {
  border-block-end: 0.16182em solid
}

/* PWA RELATED */
/* https://caniuse.com/user-select-none */
/* TODO: Use @supports - https://developer.mozilla.org/en-US/docs/Web/CSS/@supports */
/* https://developer.apple.com/library/archive/documentation/AppleApplications/Conceptual/SafariJSProgTopics/DragAndDrop.html#//apple_ref/doc/uid/30001233-178644 */
html, body {
  -webkit-tap-highlight-color: transparent; /* https://davidwalsh.name/mobile-highlight-color */
  -webkit-touch-callout:       none; /* Safari Touch - https://developer.mozilla.org/en-US/docs/Web/CSS/-webkit-touch-callout */
  -webkit-user-drag:           none; /* https://stackoverflow.com/questions/15034842/what-is-the-webkit-user-drag-css-property */
  -webkit-user-select:         none; /* Webkit (Chrome all / Safari all) */
          user-select:         none; /* https://caniuse.com/user-select-none */
}
/* ... */

